--- a/public/src/index.css
+++ b/public/src/index.css
@@ -13,9 +13,11 @@ input {
 }
 
 body {
-  max-height: 100vh;
-  max-width: 100vw;
+  /* max-height: 100vh; */
+  /* max-width: 100vw; */
   overflow: hidden;
+  margin: 0;
+
 }
 
 .Toastify__toast-theme--dark {
